--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
   font-family: 'Quicksand', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #122129;
+  color: #FFFCAD;
+  font-size: 1.2em;
 }
 
 code {
@@ -12,4 +15,5 @@ code {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Andika', sans-serif;
+  color: #B0DFF7;
 }
